--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="overlaying-navigation__nav-item overlaying-navigation__nav-item--column">
                 <span class="overlaying-navigation__link overlaying-navigation__link--mid u-padding-top-btm-async u-border-top-green">Let's create some magic</span>
-                <a href="" class="button button--green footer__button footer__link">Inquire</a>
+                <a href="#section-form" id="inquireBtn-responsive" class="button button--green footer__button footer__link">Inquire</a>
             </div>
             <div class="overlaying-navigation__nav-item u-margin-bottom-mid">
                 <ul class="footer__list footer__list--standalone">
@@ -175,7 +175,9 @@
                     <ul class="offerings">
                         <li class="offerings__item">
                             <span class="offerings__item-icon">
-                                <object data="./img/svg/star-icon.svg" type="image/svg+xml" class="offerings__icon"></object>
+                                <svg class="offerings__icon" width="30" height="28" viewBox="0 0 30 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M15.2389 1.68969L11.564 9.67826C11.4157 10.0007 11.1075 10.2204 10.7543 10.2555L1.95599 11.1288L8.48721 16.9414C8.75775 17.1821 8.87697 17.5504 8.79888 17.904L6.9313 26.3617L14.8762 21.916C14.9654 21.8661 15.0634 21.8464 15.1582 21.8537C15.2522 21.8478 15.3489 21.8683 15.4369 21.9185L23.3453 26.4288L21.5467 17.9561C21.4715 17.6018 21.5937 17.2346 21.8662 16.996L28.4445 11.2368L19.6536 10.2919C19.3007 10.2539 18.9943 10.0318 18.8486 9.70811L15.2389 1.68969ZM15.1523 22.9074L7.41962 27.2344C6.66629 27.656 5.76869 26.9891 5.95482 26.1461L7.8224 17.6884L1.29117 11.8758C0.640249 11.2965 0.9901 10.2198 1.85721 10.1337L10.6555 9.26034L14.7548 0.349015C14.8447 0.15375 15.0445 0.0439389 15.2469 0.0592704C15.4485 0.0467873 15.646 0.158097 15.7338 0.353192L19.7605 9.2976L28.5514 10.2426C29.4178 10.3357 29.7588 11.4153 29.1032 11.9892L22.5249 17.7484L24.3235 26.2211C24.5028 27.0655 23.5998 27.7251 22.8499 27.2974L15.1523 22.9074Z"/>
+                                    </svg>
                             </span>
                             <span class="offerings__item-description">
                                 <a href="./links/services.html" class="offerings__link">Brand and creative</a>
@@ -183,7 +185,9 @@
                         </li>
                         <li class="offerings__item">
                             <span class="offerings__item-icon">
-                                <object data="./img/svg/digi-product-icon.svg" type="image/svg+xml" class="offerings__icon"></object>
+                                <svg class="offerings__icon" width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M19.0056 0.673853L19.7889 0L20.2351 0.939707L29.4586 20.3657L29.9999 21.5059L28.7704 21.24L23.4303 20.0853L27.5965 28.8599L28.1378 30L26.9083 29.7342L1.22949 24.1816L0 23.9157L0.950395 23.0982L8.26466 16.806L3.09159 15.6875L1.86209 15.4216L2.81249 14.604L19.0056 0.673853ZM9.49415 17.0719L2.17989 23.364L26.367 28.594L22.2008 19.8195L9.49415 17.0719ZM21.6595 18.6793L10.4445 16.2543L17.5897 10.1077L21.6595 18.6793ZM22.889 18.9452L18.373 9.43385L17.9268 8.49414L17.1435 9.16799L9.21505 15.9885L4.04198 14.8699L19.4517 1.61356L28.2291 20.0999L22.889 18.9452Z"/>
+                                    </svg>
                             </span>
                             <span class="offerings__item-description">
                                 <a href="./links/services.html" class="offerings__link">Web design</a>
@@ -191,7 +195,9 @@
                         </li>
                         <li class="offerings__item">
                             <span class="offerings__item-icon">
-                                <object data="./img/svg/shirt-icon.svg" type="image/svg+xml" class="offerings__icon"></object>
+                                <svg class="offerings__icon" width="29" height="29" viewBox="0 0 29 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M10.23 0.499862L10.0669 0L9.57587 0.188067L0.408786 3.69915L6.10352e-05 3.85569L0.101138 4.28154L1.62899 10.7185L1.72026 11.103H2.11547H5.68973V27.5733V28.0733H6.18973H13.829H14.3383H21.9776H22.4776V27.5733V11.103H26.0518H26.447L26.5383 10.7185L28.0661 4.28154L28.1672 3.85569L27.7585 3.69915L18.5914 0.188067L18.1004 0L17.9372 0.499862C16.9193 3.61883 15.1548 4.26584 14.2488 4.28433L14.2442 4.26017C14.1966 4.2693 14.1428 4.27633 14.0836 4.28049C14.0245 4.27633 13.9707 4.2693 13.9231 4.26017L13.9184 4.28433C13.0125 4.26584 11.248 3.61883 10.23 0.499862ZM14.0836 5.28293C12.771 5.34581 10.6688 4.50626 9.45394 1.30561L1.17518 4.47645L2.51068 10.103H6.18973H6.68973V10.603V27.0733H13.829H14.3383H21.4776V10.603V10.103H21.9776H25.6566L26.9921 4.47645L18.7133 1.30561C17.4985 4.50626 15.3963 5.34581 14.0836 5.28293Z"/>
+                                    </svg>
                             </span>
                             <span class="offerings__item-description">
                                 <a href="./links/services.html" class="offerings__link">Merchandise</a>
@@ -442,6 +448,13 @@
             document.querySelector(".menu__logo-img").style.position = "static";
         }
     })
+
+    const inquireBtn = document.getElementById("inquireBtn-responsive");
+    inquireBtn.addEventListener('click',(e)=>{
+        const navigation = document.getElementById('navi-toggle');
+        navigation.checked = false;
+        enableScroll();
+    });
 
     function enableScroll(){
         const navigation = document.getElementById('navi-toggle');
