--- a/blogs/typingwithtoddlers.html
+++ b/blogs/typingwithtoddlers.html
@@ -199,11 +199,11 @@
         </div>
         <ul class="footer__list">
             <div class="footer__list-section">
-                <li class="footer__list-item"><a href="#" class="footer__link">About</a></li>
-                <li class="footer__list-item"><a href="#" class="footer__link">Portfolio</a></li>
-                <li class="footer__list-item"><a href="#" class="footer__link">Blog</a></li>
-                <li class="footer__list-item"><a href="#" class="footer__link">Testimonials</a></li>
-                <li class="footer__list-item"><a href="#" class="footer__link">Contact us</a></li>
+                <li class="footer__list-item"><a href="../links/services.html" class="footer__link">About</a></li>
+                <li class="footer__list-item"><a href="../links/portfolio.html" class="footer__link">Portfolio</a></li>
+                <li class="footer__list-item"><a href="../index.html#section-blog" class="footer__link">Blog</a></li>
+                <li class="footer__list-item"><a href="../links/testimonials.html" class="footer__link">Testimonials</a></li>
+                <li class="footer__list-item"><a href="../links/contact.html" class="footer__link">Contact us</a></li>
             </div>
             <div class="footer__list-section">
                 <li class="footer__list-item">
