--- a/links/portfolio.html
+++ b/links/portfolio.html
@@ -27,7 +27,7 @@
             </div>
             <div class="overlaying-navigation__nav-item overlaying-navigation__nav-item--column">
                 <span class="overlaying-navigation__link overlaying-navigation__link--mid u-padding-top-btm-async u-border-top-green">Let's create some magic</span>
-                <a href="" class="button button--green footer__button footer__link">Inquire</a>
+                <a href="./contact.html" class="button button--green footer__button footer__link">Inquire</a>
             </div>
             <div class="overlaying-navigation__nav-item u-margin-bottom-mid">
                 <ul class="footer__list footer__list--standalone">
@@ -236,11 +236,11 @@
     </div>
     <ul class="footer__list">
         <div class="footer__list-section">
-            <li class="footer__list-item"><a href="#" class="footer__link">About</a></li>
-            <li class="footer__list-item"><a href="#" class="footer__link">Portfolio</a></li>
-            <li class="footer__list-item"><a href="#" class="footer__link">Blog</a></li>
-            <li class="footer__list-item"><a href="#" class="footer__link">Testimonials</a></li>
-            <li class="footer__list-item"><a href="#" class="footer__link">Contact us</a></li>
+            <li class="footer__list-item"><a href="./services.html" class="footer__link">About</a></li>
+            <li class="footer__list-item"><a href="./portfolio.html" class="footer__link">Portfolio</a></li>
+            <li class="footer__list-item"><a href="../index.html#section-blog" class="footer__link">Blog</a></li>
+            <li class="footer__list-item"><a href="./testimonials.html" class="footer__link">Testimonials</a></li>
+            <li class="footer__list-item"><a href="./contact.html" class="footer__link">Contact us</a></li>
         </div>
         <div class="footer__list-section">
             <li class="footer__list-item">
@@ -279,7 +279,7 @@
                 </span>
             </li>
             <li class="footer__list-item u-left-padding-zero">
-                <a href="" class="button button--green footer__button footer__link">Inquire</a>
+                <a href="./contact.html" class="button button--green footer__button footer__link">Inquire</a>
             </li>
         </div>
     </ul>
