--- a/case-studies/pixel.html
+++ b/case-studies/pixel.html
@@ -73,7 +73,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="case-study">
+        <div class="case-study" id="case-study" >
             <div id="hero-image" style="background-image: url(../img/covers/hero-mayhem.png)" class="case-study__cover">
                 <div id="left-arrow" class="case-study__arrow-container case-study__arrow-container--left">
                     <img src="../img/svg/arrow-left.svg" alt="" class="case-study__arrow case-study__arrow--left">
@@ -82,14 +82,14 @@
                     <img src="../img/svg/arrow-right.svg" alt="" class="case-study__arrow case-study__arrow--right">
                 </div>
             </div>
-            <div class="case-study__triangle">
+            <div id="button-more" class="case-study__triangle">
                 <img src="../img/svg/case-study__triangle.svg" class="case-study__triangle-image">
             </div>
             <div class="case-study__description">
                 <h1 class="case-study__study-heading">Case study: Website design pixel playground</h1>
-            </div>
-            <div class="case-study__wave">
-                <img class="case-study__wave-image">
+                <p class="case-study__study-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo commodi repellendus deleniti, consectetur est iure ipsa nam fugiat voluptatum amet porro accusantium, aspernatur exercitationem laboriosam incidunt distinctio officiis sit expedita?
+                </div>
             </div>
         </div>
     </header>
@@ -288,8 +288,15 @@
     const leftArrow = document.getElementById('left-arrow');
     const rightArrow = document.getElementById('right-arrow');
     const heroImage = document.getElementById('hero-image');
+    const caseStudy = document.getElementById('case-study');
+
     let heroImagePositions = ["left", "center", "right"];
-    heroImage.setAttribute('data-position','center');
+
+    window.addEventListener('load',()=>{
+        heroImage.setAttribute('data-position','center');
+        caseStudy.setAttribute('data-show-description','hidden');
+    })
+    
 
     leftArrow.addEventListener('click',ev=>{
         moveImage('left');
@@ -340,6 +347,26 @@
             document.querySelector(".overlaying-navigation__button").style.position = "absolute";
             document.querySelector(".menu__logo-img").style.position = "static";
         }
+    }
+
+    const moreButton = document.getElementById('button-more');
+    moreButton.addEventListener('click',(e)=>{
+        toggleHeroDescription();
+    })
+
+    function toggleHeroDescription(){
+        const caseStudy = document.getElementById('case-study');
+        if(caseStudy.dataset.showDescription == 'hidden')
+        caseStudy.dataset.showDescription = 'visible'
+        else
+        caseStudy.dataset.showDescription = 'hidden';
+    }
+
+    function toggleVisibility(element){
+        if(element.style.visibility == 'hidden')
+        element.style.visibility = 'visible'
+        else
+        element.style.visibility = 'hidden'
     }
 
 </script>
