--- a/links/services.html
+++ b/links/services.html
@@ -80,112 +80,60 @@
         <section class="section-services">
             <div class="u-center-text">
                 <div class="text-normal">
-                    <h2 class="text-normal--title">Branding</h2>
-                    <p class="text-normal--description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ipsam ipsa delectus, omnis, minima consectetur asperiores autem, amet facere est mollitia eum ab dolores eveniet</p>
+                    <p class="text-normal--description">FWRD is a comprehensive solution for bringing products to market, be it physical, merchandise or digital offerings.</p>
                 </div>
             </div>
-            <div class="logos logos--table">
-                <div id="services-slide" class="logos__slide logos__slide--animated">
-                        <div class="card card--orange">
-                            <div class="card__header"><h2 class="card__title">Graphic design</h2> </div>
-                            <div class="card__body"><p class="card__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae omnis suscipit sed praesentium laudantium cum sit id vero, repellendus ab quisquam nihil atque eum culpa, expedita accusantium officia, iure quidem.</p></div>
-                        </div>
-                        <div class="card card--orange">
-                            <div class="card__header"><h2 class="card__title">Web design</h2></div>
-                            <div class="card__body"><p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ducimus facilis in pariatur placeat eos nulla cumque, consequatur unde nemo debitis dolore nobis delectus impedit illum ipsam commodi veniam quia.</p></div>
-                        </div>
-                        <div class="card card--orange">
-                            <div class="card__header"><h2 class="card__title">Content & Marketing</h2></div>
-                            <div class="card__body"><p class="card__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae omnis suscipit sed praesentium laudantium cum sit id vero, repellendus ab quisquam nihil atque eum culpa, expedita accusantium officia, iure quidem.</p></div>
-                        </div>
-                        <div class="card card--orange">
-                            <div class="card__header"><h2 class="card__title">Social media strategy</h2></div>
-                            <div class="card__body"><p class="card__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae omnis suscipit sed praesentium laudantium cum sit id vero, repellendus ab quisquam nihil atque eum culpa, expedita accusantium officia, iure quidem.</p></div>
-                        </div>
-                        <div class="card card--orange">
-                            <div class="card__header"><h2 class="card__title">Channel optimisation</h2></div>
-                            <div class="card__body"><p class="card__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae omnis suscipit sed praesentium laudantium cum sit id vero, repellendus ab quisquam nihil atque eum culpa, expedita accusantium officia, iure quidem.</p></div>
-                        </div>
+            <div class="u-center-text">
+                <div class="text-normal">
+                    <p class="text-normal--description">We're here to support you; and to help your business develop ideas and projects into fully realised pieces of your organisation.
+                    </p>
                 </div>
             </div>
-            <div class="zigzag-container">
-                <div class="zigzag-container__item">
-                    <div class="zigzag-container__item-description"></div>
-                    <div class="zigzag-container__item-presentation">
-                        <div class="u-left-text u-padding-bottom-sm">
-                            <div class="text-normal">
-                                <h2 class="text-normal--title">Ecommerce</h2>
-                                <p class="text-normal--description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ipsam ipsa delectus, omnis, minima consectetur asperiores autem, amet facere est mollitia eum ab dolores eveniet</p>
-                            </div>
-                        </div>
-                        <div class="card-container">
-                            <div class="card-container__row">
-                                <div class="card card--purple">
-                                    <div class="card__header"><h2 class="card__title">Marketing assets</h2></div>
-                                    <div class="card__body"><p class="card__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae omnis suscipit sed praesentium laudantium cum sit id vero, repellendus ab quisquam nihil atque eum culpa, expedita accusantium officia, iure quidem.</p></div>
-                                </div>
-                                <div class="card card--purple">
-                                    <div class="card__header"><h2 class="card__title">Shop design</h2></div>
-                                    <div class="card__body"><p class="card__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae omnis suscipit sed praesentium laudantium cum sit id vero, repellendus ab quisquam nihil atque eum culpa, expedita accusantium officia, iure quidem.</p></div>
-                                </div>
-                            </div>
-                            <div class="card-container__row">
-                                <div class="card card--purple">
-                                    <div class="card__header"><h2 class="card__title">Shop development</h2></div>
-                                    <div class="card__body"><p class="card__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae omnis suscipit sed praesentium laudantium cum sit id vero, repellendus ab quisquam nihil atque eum culpa, expedita accusantium officia, iure quidem.</p></div>
-                                </div>
-                                <div class="card card--purple">
-                                    <div class="card__header"><h2 class="card__title">customer relationship</h2></div>
-                                    <div class="card__body"><p class="card__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae omnis suscipit sed praesentium laudantium cum sit id vero, repellendus ab quisquam nihil atque eum culpa, expedita accusantium officia, iure quidem.</p></div>
-                                </div>
-                            </div>
-                        </div>
+            <div class="u-center-text">
+                <div class="text-normal">
+                    <p class="text-normal--description">Below you'll find a broad scope of solutions we offer, though this is by no means exhaustive.
+                        When FWRD gains a new client, we gain partnership, and we're proud of the tailored picture we create for each and every one.</p>
+                </div>
+            </div>
+
+            <div class="section-services__service">
+                <div class="text-normal"> 
+                    <h2 class="text-normal--title u-color-purple">Creative</h2>
+                </div>
+                <div class="u-table">
+                    <div class="card card--purple">
+                        <div class="card__header"><h2 class="card__title">Branding</h2></div>
+                        <div class="card__body"><p class="card__text">The look and feel. We create your logo, develop your brand guidelines, and provide all associated assets.</p></div>
                     </div>
-                </div>
-                <div class="zigzag-container__item">
-                    <div class="zigzag-container__item-description"></div>
-                    <div class="zigzag-container__item-presentation">
-                        <div class="u-left-text u-padding-bottom-sm">
-                            <div class="text-normal">
-                                <h2 class="text-normal--title">Supply Chain</h2>
-                                <p class="text-normal--description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ipsam ipsa delectus, omnis, minima consectetur asperiores autem, amet facere est mollitia eum ab dolores eveniet</p>
-                            </div>
-                        </div>
-                        <div class="card-container">
-                            <div class="card-container__row">
-                                <div class="card card--green">
-                                    <div class="card__header"><h2 class="card__title">Shop development</h2></div>
-                                    <div class="card__body"><p class="card__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae omnis suscipit sed praesentium laudantium cum sit id vero, repellendus ab quisquam nihil atque eum culpa, expedita accusantium officia, iure quidem.</p></div>
-                                </div>
-                                <div class="card card--green">
-                                    <div class="card__header"><h2 class="card__title">Shop development</h2></div>
-                                    <div class="card__body"><p class="card__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae omnis suscipit sed praesentium laudantium cum sit id vero, repellendus ab quisquam nihil atque eum culpa, expedita accusantium officia, iure quidem.</p></div>
-                                </div>
-                            </div>
-                            <div class="card-container__row">
-                                <div class="card card--green">
-                                    <div class="card__header"><h2 class="card__title">Shop development</h2></div>
-                                    <div class="card__body"><p class="card__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae omnis suscipit sed praesentium laudantium cum sit id vero, repellendus ab quisquam nihil atque eum culpa, expedita accusantium officia, iure quidem.</p></div>
-                                </div>
-                                <div class="card card--green">
-                                    <div class="card__header"><h2 class="card__title">customer relationship</h2></div>
-                                    <div class="card__body"><p class="card__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae omnis suscipit sed praesentium laudantium cum sit id vero, repellendus ab quisquam nihil atque eum culpa, expedita accusantium officia, iure quidem.</p></div>
-                                </div>
-                            </div>
-                            <div class="card-container__row">
-                                <div class="card card--green">
-                                    <div class="card__header"><h2 class="card__title">Shop development</h2></div>
-                                    <div class="card__body"><p class="card__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae omnis suscipit sed praesentium laudantium cum sit id vero, repellendus ab quisquam nihil atque eum culpa, expedita accusantium officia, iure quidem.</p></div>
-                                </div>
-                                <div class="card card--green">
-                                    <div class="card__header"><h2 class="card__title">Shop development</h2></div>
-                                    <div class="card__body"><p class="card__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae omnis suscipit sed praesentium laudantium cum sit id vero, repellendus ab quisquam nihil atque eum culpa, expedita accusantium officia, iure quidem.</p></div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="card card--purple">
+                        <div class="card__header"><h2 class="card__title">Content & Marketing</h2></div>
+                        <div class="card__body"><p class="card__text">Full production and strategy that incorporates the ‘hard details’ and values of your organisation.</p></div>
+                    </div>
+                    <div class="card card--purple">
+                        <div class="card__header"><h2 class="card__title">Graphic motion & Video</h2></div>
+                        <div class="card__body"><p class="card__text">Imagination is everything. Our versatile creative team is tailored to your creative vision and budget.</p></div>
+                    </div>
+                    <div class="card card--purple">
+                        <div class="card__header"><h2 class="card__title">Social media strategy</h2></div>
+                        <div class="card__body"><p class="card__text">We use visual storytelling and tangible delivery to create a meaningful, consistent relationships with your audience.</p></div>
+                    </div>
+                    <div class="card card--purple">
+                        <div class="card__header"><h2 class="card__title">Channel optimisation</h2></div>
+                        <div class="card__body"><p class="card__text">Build platform specific strategies that make best use of social media algorithms and best practices.</p></div>
                     </div>
                 </div>
             </div>
+
+            <div class="section-services__service">
+                <div style="text-align:end;" class="text-normal "> 
+                    <h2 class="text-normal--title u-color-orange">Collaboration.</h2>
+                    <h2 class="text-normal--title u-color-orange">Always.</h2>
+                    <p class="text-normal--description">When we engage with a client, it's a joint venture; we chart the course hand-in-hand. We do it because we believe in our partners' visions and are committed to seeing their efforts flourish.</p>
+                </div>
+            </div>
+
+
+
         </section>
         <section class="section-clients">
             <div class="notch-title notch-title--green notch-title--top-left">
@@ -296,7 +244,7 @@
 </body>
 
 <script>
-    cloneNodes(["services-slide", "clients-slide"]);
+    cloneNodes(["clients-slide"]);
 
     function cloneNodes(nodeIds){
         nodeIds.forEach(nodeId=>{
