--- a/links/testimonials.html
+++ b/links/testimonials.html
@@ -85,7 +85,7 @@
         <img src="../img/svg/bg-top-purple-wave-testimonial.svg" alt="" class="section-testimonials__img section-testimonials__img--top-left">
         <img src="../img/svg/bg-bottom-purple-wave-testimonial.svg" alt="" class="section-testimonials__img section-testimonials__img--bottom-right">
         <div class="u-flex-column u-flex-column--center u-mw-80 u-center-div u-content-layer">
-            <div class="u-flex-row">
+            <div class="u-row">
                 <div class="quote quote--med quote--round quote--orange">
                     <div class="quote__row">
                         <span class="quote__title">Testimonial</span>
@@ -112,7 +112,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="u-flex-row u-margin-top-mid u-margin-top-mid-phone">
+            <div class="u-row u-margin-top-mid u-margin-top-mid-phone">
                 <div class="u-mw-80">
                     <div class="u-center-text">
                         <img src="../img/zigzag.png" class="u-image-cover-top-mh50">
