--- a/links/services.html
+++ b/links/services.html
@@ -130,6 +130,9 @@
                     <h2 class="text-normal--title u-color-orange">Always.</h2>
                     <p class="text-normal--description">When we engage with a client, it's a joint venture; we chart the course hand-in-hand. We do it because we believe in our partners' visions and are committed to seeing their efforts flourish.</p>
                 </div>
+                <div>
+                    
+                </div>
             </div>
 
 
