--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css"/>
+    <script src="./scripts/index.js"></script>
 </head>
 <body>
     <div class="overlaying-navigation">
@@ -329,22 +330,22 @@
                         <span class="u-text-block">your requirement</span>
                     </h2>
                 </div>
-                <form id="form" action="#" method="POST" class="form" autocomplete="off">
+                <form id="form" class="form" autocomplete="off">
                     <div class="form__row">
                         <div class="form__group">
-                            <input id="name" name="name" type="text" placeholder="Name" class="form__input" autocomplete="off" required>
+                            <input id="name" name="name" type="text" placeholder="Name" class="form__input" autocomplete="off" >
                             <label for="name" class="form__label">Name</label>
                             <small id="error-name" class="form__error">No issues.</small>
                         </div>
                         <div class="form__group">
-                            <input type="email" id="email" name="email" placeholder="Email" class="form__input" autocomplete="off" required>
+                            <input type="email" id="email" name="email" placeholder="Email" class="form__input" autocomplete="off" >
                             <label for="email" class="form__label">Email</label>
                             <small id="error-email" class="form__error">No issues.</small>
                         </div>
                     </div>
                     <div class="form__row">
                         <div class="form__group">
-                            <input type="text" id="phone" name="phone" placeholder="Phone number" class="form__input" autocomplete="off" required>
+                            <input type="text" id="phone" name="phone" placeholder="Phone number" class="form__input" autocomplete="off" >
                             <label for="phone" class="form__label">Phone number</label>
                             <small id="error-phone" class="form__error">No issues.</small>
                         </div>
@@ -363,7 +364,7 @@
                     </div>
                     <div class="form__row">
                         <div class="form__group u-center-text">
-                            <button class="button button--orange form__button" type="submit" disabled>
+                            <button class="button button--orange form__button" type="submit">
                                 Submit
                             </button>
                         </div>
@@ -434,25 +435,14 @@
     </footer>
 </body>
 <script>
-    let clientsSlide = document.getElementById('clients-slide');
-    let copy = clientsSlide.cloneNode(true);
-    clientsSlide.parentNode.appendChild(copy);
+    cloneNodes(['clients-slide']);
 
     window.addEventListener('load', function(event) {
         enableScroll();
     });
 
     const navigation = document.getElementById('navi-toggle');
-    navigation.addEventListener('change',(e)=>{
-        if(e.target.checked){
-            document.querySelector(".overlaying-navigation__button").style.position = "fixed";
-            document.querySelector(".menu__logo-img").style.position = "fixed";
-        }
-        else{
-            document.querySelector(".overlaying-navigation__button").style.position = "absolute";
-            document.querySelector(".menu__logo-img").style.position = "static";
-        }
-    })
+    navigation.addEventListener('change',enableScroll)
 
     const inquireBtn = document.getElementById("inquireBtn-responsive");
     inquireBtn.addEventListener('click',(e)=>{
@@ -461,108 +451,6 @@
         enableScroll();
     });
 
-    function enableScroll(){
-        const navigation = document.getElementById('navi-toggle');
-
-        if(navigation.checked){
-            document.querySelector(".overlaying-navigation__button").style.position = "fixed";
-            document.querySelector(".menu__logo-img").style.position = "fixed";
-        }
-        else{
-            document.querySelector(".overlaying-navigation__button").style.position = "absolute";
-            document.querySelector(".menu__logo-img").style.position = "static";
-        }
-    }
-</script>
-<script>
-    function getFormData(){
-        return {
-            name: document.getElementById('name').value,
-            email: document.getElementById('email').value,
-            phone: document.getElementById('phone').value,
-            service: document.getElementById('service').value,
-            info: document.getElementById('info').value
-        }
-    }
-
-    document.getElementById('form').addEventListener('submit',submitForm);
-
-    function submitForm(event){
-        e.preventDefault();
-
-        const data = getFormData();
-        const errors = doValidation(data);
-
-        if(Object.keys(errors) > 0){
-            alert("Check console");
-            console.log("Errors!!! in form", errors);
-            displayErrors(errors);
-            return;
-        }
-        else{
-            hideErrors(data);
-        }
-
-        sendRequest();
-    }
-
-    function sendRequest(data){
-        const uri = "";
-        data.clientTime = new Date().toISOString();
-
-        fetch(uri,{
-            method:'POST',
-            headers:{
-                'Content-Type':'application/json',
-            },
-            body: JSON.stringify(data)
-        }).then(response=>{
-            console.log(response.status, response);
-        }).catch(err=>{
-            alert("Server error");
-        })
-    }
-
-    function hideErrors(data){
-        for(prop in errors){
-            document.getElementById(`error-${prop}`).style.visibility = 'hidden';
-        }
-    }
-
-    function displayErrors(errors){
-        for(prop in errors){
-            const errorPlaceholder = document.getElementById(`error-${prop}`)
-            errorPlaceholder.style.visibility = 'visible';
-            errorPlaceholder.innerText = errors[prop];
-        }
-    }
-
-    function doValidation(data){
-       const errors = {};
-
-       if(validateString(data.name))
-       errors.name = 'Please input a valid name.';
-        
-       if(validateString(data.service))
-       errors.service = 'Please tell us which service you\'re interested in';
-
-       if(validateString(data.tellUsMore))
-       errors.info = 'Please tell us how we may be of service.';
-
-       if(validateEmail(data.email))
-       errors.email = 'Please input a valid email.'
-
-       return errors;
-    }
-
-    function validateString(input){
-        if(input && input.length > 0)
-        return true;
-        return false;
-    }
-    function validateEmail(email) {
-    var re = /\S+@\S+\.\S+/;
-    return re.test(email);
-    }
+    document.querySelector('.form button[type=submit]').addEventListener('click',submitForm);
 </script>
 </html>
