--- a/links/contact.html
+++ b/links/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css" />
+    <script src="../scripts/index.js"></script>
 </head>
 
 <body class="contact">
@@ -27,7 +28,7 @@
             </div>
             <div class="overlaying-navigation__nav-item overlaying-navigation__nav-item--column">
                 <span class="overlaying-navigation__link overlaying-navigation__link--mid u-padding-top-btm-async u-border-top-green">Let's create some magic</span>
-                <a href="./contact.html" class="button button--green footer__button footer__link">Inquire</a>
+                <a href="#section-form" id="inquireBtn-responsive" class="button button--green footer__button footer__link">Inquire</a>
             </div>
             <div class="overlaying-navigation__nav-item u-margin-bottom-mid">
                 <ul class="footer__list footer__list--standalone">
@@ -61,19 +62,23 @@
         </div>
     </div>
     <header class="header">
-        <div class="menu">
-            <div class="menu__logo">
-                <img src="../img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
+        <div class="background-layer">
+        </div>
+        <div class="content-layer">
+            <div class="menu">
+                <div class="menu__logo">
+                    <img src="../img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
+                </div>
+                <nav class="navigation">
+                    <ul class="navigation__list">
+                        <li class="navigation__item"><a href="../index.html" class="navigation__link">Home</a></li>
+                        <li class="navigation__item"><a href="./portfolio.html" class="navigation__link">Portfolio</a></li>
+                        <li class="navigation__item"><a href="./services.html" class="navigation__link">Services</a></li>
+                        <li class="navigation__item"><a href="./testimonials.html" class="navigation__link">Testimonials</a></li>
+                        <li class="navigation__item"><a href="./contact.html" class="navigation__link">Contact</a></li>
+                    </ul>
+                </nav>
             </div>
-            <nav class="navigation">
-                <ul class="navigation__list">
-                    <li class="navigation__item"><a href="../index.html" class="navigation__link">Home</a></li>
-                    <li class="navigation__item"><a href="./portfolio.html" class="navigation__link">Portfolio</a></li>
-                    <li class="navigation__item"><a href="./services.html" class="navigation__link">Services</a></li>
-                    <li class="navigation__item"><a href="./testimonials.html" class="navigation__link">Testimonials</a></li>
-                    <li class="navigation__item"><a href="./contact.html" class="navigation__link">Contact</a></li>
-                </ul>
-            </nav>
         </div>
         <div class="page-notch">
             <div class="page-notch__content">
@@ -82,7 +87,7 @@
         </div>
     </header>
     <main>
-        <section class="section-form">
+        <section id="section-form" class="section-form">
             <img src="../img/svg/contact-us-purple-wave.svg" alt="" class="section-form__wave-purple--top-right">
             <div class="u-center-text u-section-title  u-padding-bottom-med u-layer-relative-content">
                 <h2 class="h-1">
@@ -90,36 +95,41 @@
                     <span class="u-text-block">your requirement</span>
                 </h2>
             </div>
-            <form action="#" method="POST" class="form wrapper" autocomplete="off">
+            <form id="form" class="form" autocomplete="off">
                 <div class="form__row">
                     <div class="form__group">
-                        <input id="name" name="name" type="text" placeholder="Name" class="form__input" autocomplete="off" required>
+                        <input id="name" name="name" type="text" placeholder="Name" class="form__input" autocomplete="off" >
                         <label for="name" class="form__label">Name</label>
+                        <small id="error-name" class="form__error">No issues.</small>
                     </div>
                     <div class="form__group">
-                        <input type="email" id="email" name="email" placeholder="Email" class="form__input" autocomplete="off" required>
+                        <input type="email" id="email" name="email" placeholder="Email" class="form__input" autocomplete="off" >
                         <label for="email" class="form__label">Email</label>
+                        <small id="error-email" class="form__error">No issues.</small>
                     </div>
                 </div>
                 <div class="form__row">
                     <div class="form__group">
-                        <input type="text" id="phone" name="phone" placeholder="Phone number" class="form__input" autocomplete="off" required>
+                        <input type="text" id="phone" name="phone" placeholder="Phone number" class="form__input" autocomplete="off" >
                         <label for="phone" class="form__label">Phone number</label>
+                        <small id="error-phone" class="form__error">No issues.</small>
                     </div>
                     <div class="form__group">
                         <input type="text" id="service" name="service" class="form__input" placeholder="Which service are you interested in?" autocomplete="off" required>
                         <label for="service" class="form__label">Which service are you interested in?</label>
+                        <small id="error-service" class="form__error">No issues.</small>
                     </div>
                 </div>
                 <div class="form__row">
                     <div class="form__group form__group--full-width">
                         <input type="text" class="form__input" id="info" name="info" placeholder="Tell us more">
                         <label for="info" class="form__label">Tell us more</label>
+                        <small id="error-info" class="form__error">No issues.</small>
                     </div>
                 </div>
                 <div class="form__row">
                     <div class="form__group u-center-text">
-                        <button class="button button--orange form__button" type="submit" disabled>
+                        <button class="button button--orange form__button" type="submit">
                             Submit
                         </button>
                     </div>
@@ -195,27 +205,14 @@
     });
 
     const navigation = document.getElementById('navi-toggle');
-    navigation.addEventListener('change',(e)=>{
-        if(e.target.checked){
-            document.querySelector(".overlaying-navigation__button").style.position = "fixed";
-            document.querySelector(".menu__logo-img").style.position = "fixed";
-        }
-        else{
-            document.querySelector(".overlaying-navigation__button").style.position = "absolute";
-            document.querySelector(".menu__logo-img").style.position = "static";
-        }
-    })
+    navigation.addEventListener('change',enableScroll)
 
-    function enableScroll(){
+    const inquireBtn = document.getElementById("inquireBtn-responsive");
+    inquireBtn.addEventListener('click',(e)=>{
         const navigation = document.getElementById('navi-toggle');
-
-        if(navigation.checked){
-            document.querySelector(".overlaying-navigation__button").style.position = "fixed";
-            document.querySelector(".menu__logo-img").style.position = "fixed";
-        }
-        else{
-            document.querySelector(".overlaying-navigation__button").style.position = "absolute";
-            document.querySelector(".menu__logo-img").style.position = "static";
-        }
-    }
+        navigation.checked = false;
+        enableScroll();
+    });
+    
+    document.querySelector('.form button[type=submit]').addEventListener('click',submitForm);
 </script>
