--- a/links/portfolio.html
+++ b/links/portfolio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css" />
+    <script src="../scripts/index.js"></script>
 </head>
 
 <body class="portfolio">
@@ -287,36 +288,13 @@
 </footer>
 </body>
 <script>
-    let clientsSlide = document.getElementById('clients-slide');
-    let copy = clientsSlide.cloneNode(true);
-    clientsSlide.parentNode.appendChild(copy);
+    cloneNodes(["clients-slide"]);
 
     window.addEventListener('load', function(event) {
         enableScroll();
     });
 
     const navigation = document.getElementById('navi-toggle');
-    navigation.addEventListener('change',(e)=>{
-        if(e.target.checked){
-            document.querySelector(".overlaying-navigation__button").style.position = "fixed";
-            document.querySelector(".menu__logo-img").style.position = "fixed";
-        }
-        else{
-            document.querySelector(".overlaying-navigation__button").style.position = "absolute";
-            document.querySelector(".menu__logo-img").style.position = "static";
-        }
-    })
+    navigation.addEventListener('change',enableScroll)
 
-    function enableScroll(){
-        const navigation = document.getElementById('navi-toggle');
-
-        if(navigation.checked){
-            document.querySelector(".overlaying-navigation__button").style.position = "fixed";
-            document.querySelector(".menu__logo-img").style.position = "fixed";
-        }
-        else{
-            document.querySelector(".overlaying-navigation__button").style.position = "absolute";
-            document.querySelector(".menu__logo-img").style.position = "static";
-        }
-    }
 </script>
