Case studies content fix

--- a/case-studies/pixel.html
+++ b/case-studies/pixel.html
@@ -95,6 +95,9 @@
     </header>
     <main>
         <section class="section-brief">
+            <div class="section-brief__orange-wave">
+                <img class="section-brief__orange-wave--img" src="../img/svg/case-studies-header-orange-wave.svg" alt="case study orange wave">
+            </div>
             <div class="study-content">
                 <div class="study-content__side">
                     <div class="study-content__item">
