Services Page Refactor

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                             <img src="./img/svg/behance.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
-                    <!-- <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                    <li class="footer__list-item">
+                        <a href="https://dribbble.com/FWRD/about" class="footer__link">
                             <img src="./img/svg/dribble.svg" alt="" class="footer__social-media">
                         </a>
-                    </li> -->
+                    </li>
                     <li class="footer__list-item">
                         <a href="https://www.linkedin.com/company/fwrd-digital-product" class="footer__link">
                             <img src="./img/svg/linkedin.svg" alt="" class="footer__social-media">
@@ -398,11 +398,11 @@
                                     <img src="./img/svg/behance.svg" alt="" class="footer__social-media">
                                 </a>
                             </li>
-                            <!-- <li class="footer__list-item">
-                                <a href="#" class="footer__link">
+                            <li class="footer__list-item">
+                                <a href="https://dribbble.com/FWRD/about" class="footer__link">
                                     <img src="./img/svg/dribble.svg" alt="" class="footer__social-media">
                                 </a>
-                            </li> -->
+                            </li>
                             <li class="footer__list-item">
                                 <a href="https://www.linkedin.com/company/fwrd-digital-product" class="footer__link">
                                     <img src="./img/svg/linkedin.svg" alt="" class="footer__social-media">
